--- a/Airline-Data.ipynb
+++ b/Airline-Data.ipynb
@@ -113,7 +113,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 2,
+            "execution_count": 3,
             "metadata": {},
             "outputs": [
                 {
@@ -121,64 +121,64 @@
                     "output_type": "stream",
                     "text": [
                         "\n",
-                        "| Attribute Name                     | Data Type | Description                                                               | Possible Values                                            |\n",
-                        "|------------------------------------|-----------|---------------------------------------------------------------------------|------------------------------------------------------------|\n",
-                        "| id                                 | Integer   | Unique identifier for the passenger                                       | Numeric IDs                                                |\n",
-                        "| Gender                             | String    | Gender of the passenger                                                   | Male, Female                                               |\n",
-                        "| Customer Type                      | String    | Type of the customer                                                      | Loyal Customer, disloyal Customer                          |\n",
-                        "| Age                                | Integer   | Age of the passenger                                                      | Numeric ages                                               |\n",
-                        "| Type of Travel                     | String    | Purpose of the flight                                                     | Business travel, Personal Travel                           |\n",
-                        "| Class                              | String    | Class of the flight                                                       | Eco, Business, Eco Plus                                    |\n",
-                        "| Flight Distance                    | Integer   | Distance of the flight                                                    | Numeric distances  31 to 4983                              |\n",
-                        "| Inflight wifi service              | Integer   | Satisfaction level with inflight wifi service                             | 0 to 5                                                     |\n",
-                        "| Departure/Arrival time convenient  | Integer   | Satisfaction level with departure/arrival time convenience                | 0 to 5                                                     |\n",
-                        "| Ease of Online booking             | Integer   | Satisfaction level with online booking ease                               | 0 to 5                                                     |\n",
-                        "| Gate location                      | Integer   | Satisfaction level with gate location                                     | 0 to 5                                                     |\n",
-                        "| Food and drink                     | Integer   | Satisfaction level with food and drink                                    | 0 to 5                                                     |\n",
-                        "| Online boarding                    | Integer   | Satisfaction level with online boarding                                   | 0 to 5                                                     |\n",
-                        "| Seat comfort                       | Integer   | Satisfaction level with seat comfort                                      | 0 to 5                                                     |\n",
-                        "| Inflight entertainment             | Integer   | Satisfaction level with inflight entertainment                            | 0 to 5                                                     |\n",
-                        "| On-board service                   | Integer   | Satisfaction level with on-board service                                  | 0 to 5                                                     |\n",
-                        "| Leg room service                   | Integer   | Satisfaction level with leg room service                                  | 0 to 5                                                     |\n",
-                        "| Baggage handling                   | Integer   | Satisfaction level with baggage handling                                  | 0 to 5                                                     |\n",
-                        "| Checkin service                    | Integer   | Satisfaction level with checkin service                                   | 0 to 5                                                     |\n",
-                        "| Inflight service                   | Integer   | Satisfaction level with inflight service                                  | 0 to 5                                                     |\n",
-                        "| Cleanliness                        | Integer   | Satisfaction level with cleanliness                                       | 0 to 5                                                     |\n",
-                        "| Departure Delay in Minutes         | Integer   | Minutes delayed at departure                                              | Numeric minutes 0-1592                                     |\n",
-                        "| Arrival Delay in Minutes           | Integer   | Minutes delayed on arrival                                                | Numeric minutes 0-158000                                   |\n",
-                        "| satisfaction                       | String    | Overall satisfaction with the flight                                      | satisfied, neutral or dissatisfied                         |\n",
+                        "| Attribute Name                     | Data Type | Possible Values                                            |\n",
+                        "|------------------------------------|-----------|------------------------------------------------------------|\n",
+                        "| id                                 | Integer   | Numeric IDs                                                |\n",
+                        "| Gender                             | String    | Male, Female                                               |\n",
+                        "| Customer Type                      | String    | Loyal Customer, disloyal Customer                          |\n",
+                        "| Age                                | Integer   | Numeric ages                                               |\n",
+                        "| Type of Travel                     | String    | Business travel, Personal Travel                           |\n",
+                        "| Class                              | String    | Eco, Business, Eco Plus                                    |\n",
+                        "| Flight Distance                    | Integer   | Numeric distances  31 to 4983                              |\n",
+                        "| Inflight wifi service              | Integer   | 0 to 5                                                     |\n",
+                        "| Departure/Arrival time convenient  | Integer   | 0 to 5                                                     |\n",
+                        "| Ease of Online booking             | Integer   | 0 to 5                                                     |\n",
+                        "| Gate location                      | Integer   | 0 to 5                                                     |\n",
+                        "| Food and drink                     | Integer   | 0 to 5                                                     |\n",
+                        "| Online boarding                    | Integer   | 0 to 5                                                     |\n",
+                        "| Seat comfort                       | Integer   | 0 to 5                                                     |\n",
+                        "| Inflight entertainment             | Integer   | 0 to 5                                                     |\n",
+                        "| On-board service                   | Integer   | 0 to 5                                                     |\n",
+                        "| Leg room service                   | Integer   | 0 to 5                                                     |\n",
+                        "| Baggage handling                   | Integer   | 0 to 5                                                     |\n",
+                        "| Checkin service                    | Integer   | 0 to 5                                                     |\n",
+                        "| Inflight service                   | Integer   | 0 to 5                                                     |\n",
+                        "| Cleanliness                        | Integer   | 0 to 5                                                     |\n",
+                        "| Departure Delay in Minutes         | Integer   | Numeric minutes 0-1592                                     |\n",
+                        "| Arrival Delay in Minutes           | Integer   | Numeric minutes 0-158000                                   |\n",
+                        "| satisfaction                       | String    | satisfied, neutral or dissatisfied                         |\n",
                         "\n"
                     ]
                 }
             ],
             "source": [
                 "table = \"\"\"\n",
-                "| Attribute Name                     | Data Type | Description                                                               | Possible Values                                            |\n",
-                "|------------------------------------|-----------|---------------------------------------------------------------------------|------------------------------------------------------------|\n",
-                "| id                                 | Integer   | Unique identifier for the passenger                                       | Numeric IDs                                                |\n",
-                "| Gender                             | String    | Gender of the passenger                                                   | Male, Female                                               |\n",
-                "| Customer Type                      | String    | Type of the customer                                                      | Loyal Customer, disloyal Customer                          |\n",
-                "| Age                                | Integer   | Age of the passenger                                                      | Numeric ages                                               |\n",
-                "| Type of Travel                     | String    | Purpose of the flight                                                     | Business travel, Personal Travel                           |\n",
-                "| Class                              | String    | Class of the flight                                                       | Eco, Business, Eco Plus                                    |\n",
-                "| Flight Distance                    | Integer   | Distance of the flight                                                    | Numeric distances  31 to 4983                              |\n",
-                "| Inflight wifi service              | Integer   | Satisfaction level with inflight wifi service                             | 0 to 5                                                     |\n",
-                "| Departure/Arrival time convenient  | Integer   | Satisfaction level with departure/arrival time convenience                | 0 to 5                                                     |\n",
-                "| Ease of Online booking             | Integer   | Satisfaction level with online booking ease                               | 0 to 5                                                     |\n",
-                "| Gate location                      | Integer   | Satisfaction level with gate location                                     | 0 to 5                                                     |\n",
-                "| Food and drink                     | Integer   | Satisfaction level with food and drink                                    | 0 to 5                                                     |\n",
-                "| Online boarding                    | Integer   | Satisfaction level with online boarding                                   | 0 to 5                                                     |\n",
-                "| Seat comfort                       | Integer   | Satisfaction level with seat comfort                                      | 0 to 5                                                     |\n",
-                "| Inflight entertainment             | Integer   | Satisfaction level with inflight entertainment                            | 0 to 5                                                     |\n",
-                "| On-board service                   | Integer   | Satisfaction level with on-board service                                  | 0 to 5                                                     |\n",
-                "| Leg room service                   | Integer   | Satisfaction level with leg room service                                  | 0 to 5                                                     |\n",
-                "| Baggage handling                   | Integer   | Satisfaction level with baggage handling                                  | 0 to 5                                                     |\n",
-                "| Checkin service                    | Integer   | Satisfaction level with checkin service                                   | 0 to 5                                                     |\n",
-                "| Inflight service                   | Integer   | Satisfaction level with inflight service                                  | 0 to 5                                                     |\n",
-                "| Cleanliness                        | Integer   | Satisfaction level with cleanliness                                       | 0 to 5                                                     |\n",
-                "| Departure Delay in Minutes         | Integer   | Minutes delayed at departure                                              | Numeric minutes 0-1592                                     |\n",
-                "| Arrival Delay in Minutes           | Integer   | Minutes delayed on arrival                                                | Numeric minutes 0-158000                                   |\n",
-                "| satisfaction                       | String    | Overall satisfaction with the flight                                      | satisfied, neutral or dissatisfied                         |\n",
+                "| Attribute Name                     | Data Type | Possible Values                                            |\n",
+                "|------------------------------------|-----------|------------------------------------------------------------|\n",
+                "| id                                 | Integer   | Numeric IDs                                                |\n",
+                "| Gender                             | String    | Male, Female                                               |\n",
+                "| Customer Type                      | String    | Loyal Customer, disloyal Customer                          |\n",
+                "| Age                                | Integer   | Numeric ages                                               |\n",
+                "| Type of Travel                     | String    | Business travel, Personal Travel                           |\n",
+                "| Class                              | String    | Eco, Business, Eco Plus                                    |\n",
+                "| Flight Distance                    | Integer   | Numeric distances  31 to 4983                              |\n",
+                "| Inflight wifi service              | Integer   | 0 to 5                                                     |\n",
+                "| Departure/Arrival time convenient  | Integer   | 0 to 5                                                     |\n",
+                "| Ease of Online booking             | Integer   | 0 to 5                                                     |\n",
+                "| Gate location                      | Integer   | 0 to 5                                                     |\n",
+                "| Food and drink                     | Integer   | 0 to 5                                                     |\n",
+                "| Online boarding                    | Integer   | 0 to 5                                                     |\n",
+                "| Seat comfort                       | Integer   | 0 to 5                                                     |\n",
+                "| Inflight entertainment             | Integer   | 0 to 5                                                     |\n",
+                "| On-board service                   | Integer   | 0 to 5                                                     |\n",
+                "| Leg room service                   | Integer   | 0 to 5                                                     |\n",
+                "| Baggage handling                   | Integer   | 0 to 5                                                     |\n",
+                "| Checkin service                    | Integer   | 0 to 5                                                     |\n",
+                "| Inflight service                   | Integer   | 0 to 5                                                     |\n",
+                "| Cleanliness                        | Integer   | 0 to 5                                                     |\n",
+                "| Departure Delay in Minutes         | Integer   | Numeric minutes 0-1592                                     |\n",
+                "| Arrival Delay in Minutes           | Integer   | Numeric minutes 0-158000                                   |\n",
+                "| satisfaction                       | String    | satisfied, neutral or dissatisfied                         |\n",
                 "\"\"\"\n",
                 "\n",
                 "print(table)\n"
