--- a/Airline-Data.ipynb
+++ b/Airline-Data.ipynb
@@ -13,11 +13,23 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 3,
+            "execution_count": 6,
             "metadata": {
                 "trusted": true
             },
-            "outputs": [],
+            "outputs": [
+                {
+                    "ename": "ModuleNotFoundError",
+                    "evalue": "No module named 'pandas'",
+                    "output_type": "error",
+                    "traceback": [
+                        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+                        "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+                        "\u001b[1;32m/Users/leensalman/Desktop/Web phase3last/Web phase3/HAura/Web2/Mining project /IT326-Airline-Passenger-Satisfaction/Airline-Data.ipynb Cell 2\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/leensalman/Desktop/Web%20phase3last/Web%20phase3/HAura/Web2/Mining%20project%20/IT326-Airline-Passenger-Satisfaction/Airline-Data.ipynb#W1sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n",
+                        "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
+                    ]
+                }
+            ],
             "source": [
                 "import pandas as pd"
             ]
@@ -28,18 +40,42 @@
             "metadata": {
                 "trusted": true
             },
-            "outputs": [],
+            "outputs": [
+                {
+                    "ename": "NameError",
+                    "evalue": "name 'pd' is not defined",
+                    "output_type": "error",
+                    "traceback": [
+                        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+                        "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+                        "\u001b[1;32m/Users/leensalman/Desktop/Web phase3last/Web phase3/HAura/Web2/Mining project /IT326-Airline-Passenger-Satisfaction/Airline-Data.ipynb Cell 3\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/leensalman/Desktop/Web%20phase3last/Web%20phase3/HAura/Web2/Mining%20project%20/IT326-Airline-Passenger-Satisfaction/Airline-Data.ipynb#W2sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m read\u001b[39m=\u001b[39mpd\u001b[39m.\u001b[39mread_csv(\u001b[39m'\u001b[39m\u001b[39mDataset/Airline_Passenger_Satisfaction.csv\u001b[39m\u001b[39m'\u001b[39m)\n",
+                        "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
+                    ]
+                }
+            ],
             "source": [
                 "read=pd.read_csv('Dataset/Airline_Passenger_Satisfaction.csv')"
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 9,
+            "execution_count": 8,
             "metadata": {
                 "trusted": true
             },
-            "outputs": [],
+            "outputs": [
+                {
+                    "ename": "NameError",
+                    "evalue": "name 'pd' is not defined",
+                    "output_type": "error",
+                    "traceback": [
+                        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+                        "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+                        "\u001b[1;32m/Users/leensalman/Desktop/Web phase3last/Web phase3/HAura/Web2/Mining project /IT326-Airline-Passenger-Satisfaction/Airline-Data.ipynb Cell 4\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/leensalman/Desktop/Web%20phase3last/Web%20phase3/HAura/Web2/Mining%20project%20/IT326-Airline-Passenger-Satisfaction/Airline-Data.ipynb#W3sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m df\u001b[39m=\u001b[39mpd\u001b[39m.\u001b[39mDataFrame(read) \n",
+                        "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
+                    ]
+                }
+            ],
             "source": [
                 "df=pd.DataFrame(read) "
             ]
@@ -611,6 +647,103 @@
             ],
             "source": [
                 "display(df)"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "# Select specific attributes (columns) from the dataset\n",
+                "selected_df = df['Age ']\n",
+                "\n",
+                "# Calculate mean for Age \n",
+                "mean = selected_df.mean()\n",
+                "print(\"Mean:\\n\", mean)\n",
+                "\n",
+                "# Calculate minimum for Age \n",
+                "minimum = selected_df.min()\n",
+                "print(\"\\nMinimum:\\n\", minimum)\n",
+                "\n",
+                "# Calculate maximum for Age \n",
+                "maximum = selected_df.max()\n",
+                "print(\"\\nMaximum:\\n\", maximum)\n",
+                "\n",
+                "# Calculate median for Age \n",
+                "median = selected_df.median()\n",
+                "print(\"\\nMedian:\\n\", median)\n",
+                "\n",
+                "# Calculate standard deviation for Age \n",
+                "std_dev = selected_df.std()\n",
+                "print(\"\\nStandard Deviation:\\n\", std_dev)"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 5,
+            "metadata": {},
+            "outputs": [
+                {
+                    "ename": "NameError",
+                    "evalue": "name 'df' is not defined",
+                    "output_type": "error",
+                    "traceback": [
+                        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+                        "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+                        "\u001b[1;32m/Users/leensalman/Desktop/Web phase3last/Web phase3/HAura/Web2/Mining project /IT326-Airline-Passenger-Satisfaction/Airline-Data.ipynb Cell 11\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/leensalman/Desktop/Web%20phase3last/Web%20phase3/HAura/Web2/Mining%20project%20/IT326-Airline-Passenger-Satisfaction/Airline-Data.ipynb#X34sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m selected_df \u001b[39m=\u001b[39m df[\u001b[39m'\u001b[39m\u001b[39mFlight Distance\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/leensalman/Desktop/Web%20phase3last/Web%20phase3/HAura/Web2/Mining%20project%20/IT326-Airline-Passenger-Satisfaction/Airline-Data.ipynb#X34sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m mean \u001b[39m=\u001b[39m selected_df\u001b[39m.\u001b[39mmean()\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/leensalman/Desktop/Web%20phase3last/Web%20phase3/HAura/Web2/Mining%20project%20/IT326-Airline-Passenger-Satisfaction/Airline-Data.ipynb#X34sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mMean:\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m\"\u001b[39m, mean)\n",
+                        "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
+                    ]
+                }
+            ],
+            "source": [
+                "\n",
+                "selected_df = df['Flight Distance']\n",
+                "\n",
+                "\n",
+                "mean = selected_df.mean()\n",
+                "print(\"Mean:\\n\", mean)\n",
+                "\n",
+                "minimum = selected_df.min()\n",
+                "print(\"\\nMinimum:\\n\", minimum)\n",
+                "\n",
+                "\n",
+                "maximum = selected_df.max()\n",
+                "print(\"\\nMaximum:\\n\", maximum)\n",
+                "\n",
+                "\n",
+                "median = selected_df.median()\n",
+                "print(\"\\nMedian:\\n\", median)\n",
+                "\n",
+                "std_dev = selected_df.std()\n",
+                "print(\"\\nStandard Deviation:\\n\", std_dev)"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 9,
+            "metadata": {},
+            "outputs": [
+                {
+                    "ename": "NameError",
+                    "evalue": "name 'df' is not defined",
+                    "output_type": "error",
+                    "traceback": [
+                        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+                        "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+                        "\u001b[1;32m/Users/leensalman/Desktop/Web phase3last/Web phase3/HAura/Web2/Mining project /IT326-Airline-Passenger-Satisfaction/Airline-Data.ipynb Cell 12\u001b[0m line \u001b[0;36m6\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/leensalman/Desktop/Web%20phase3last/Web%20phase3/HAura/Web2/Mining%20project%20/IT326-Airline-Passenger-Satisfaction/Airline-Data.ipynb#X33sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m selected_attributes \u001b[39m=\u001b[39m [\u001b[39m'\u001b[39m\u001b[39mAge\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mFlight Distance\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mInflight wifi service\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mDeparture/Arrival time convenient\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mEase of Online booking\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mGate location\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/leensalman/Desktop/Web%20phase3last/Web%20phase3/HAura/Web2/Mining%20project%20/IT326-Airline-Passenger-Satisfaction/Airline-Data.ipynb#X33sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m                        \u001b[39m'\u001b[39m\u001b[39mFood and drink\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mOnline boarding\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mSeat comfort\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mInflight entertainment\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mOn-board service\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mLeg room service\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mBaggage handling\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mCheckin service\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mInflight service\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mCleanliness\u001b[39m\u001b[39m'\u001b[39m, \n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/leensalman/Desktop/Web%20phase3last/Web%20phase3/HAura/Web2/Mining%20project%20/IT326-Airline-Passenger-Satisfaction/Airline-Data.ipynb#X33sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m                        \u001b[39m'\u001b[39m\u001b[39mCleanliness\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mDeparture Delay in Minutes\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mArrival Delay in Minutes\u001b[39m\u001b[39m'\u001b[39m] \n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/leensalman/Desktop/Web%20phase3last/Web%20phase3/HAura/Web2/Mining%20project%20/IT326-Airline-Passenger-Satisfaction/Airline-Data.ipynb#X33sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39m# Calculate descriptive statistics for selected attributes\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/leensalman/Desktop/Web%20phase3last/Web%20phase3/HAura/Web2/Mining%20project%20/IT326-Airline-Passenger-Satisfaction/Airline-Data.ipynb#X33sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m statistics \u001b[39m=\u001b[39m df[selected_attributes]\u001b[39m.\u001b[39mdescribe()\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/leensalman/Desktop/Web%20phase3last/Web%20phase3/HAura/Web2/Mining%20project%20/IT326-Airline-Passenger-Satisfaction/Airline-Data.ipynb#X33sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mprint\u001b[39m(statistics)\n",
+                        "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
+                    ]
+                }
+            ],
+            "source": [
+                "selected_attributes = ['Age', 'Flight Distance', 'Inflight wifi service','Departure/Arrival time convenient', 'Ease of Online booking', 'Gate location',\n",
+                "                       'Food and drink', 'Online boarding', 'Seat comfort','Inflight entertainment', 'On-board service','Leg room service', 'Baggage handling', 'Checkin service','Inflight service', 'Cleanliness', \n",
+                "                       'Cleanliness','Departure Delay in Minutes', 'Arrival Delay in Minutes'] \n",
+                "\n",
+                "# Calculate descriptive statistics for selected attributes\n",
+                "statistics = df[selected_attributes].describe()\n",
+                "print(statistics)"
             ]
         }
     ],
