--- a/Reports/Phase1.ipynb
+++ b/Reports/Phase1.ipynb
@@ -22,7 +22,7 @@
         "## Classification for  airline passengers Survey Prediction:\n",
         "Involves using survey data attributes to predict customer satisfaction levels. The goal is to categorize respondents into predefined satisfaction categories: satisfied, neutral or dissatisfied. This classification aids in understanding customer sentiment and guiding decision-making to improve overall satisfaction.\n",
         "\n",
-        "## Clustering for Customer Survey Prediction: \n",
+        "## Clustering for airline passengers Survey Prediction: \n",
         "Clustering customer survey responses involves grouping similar data points based on common characteristics to establish distinct clusters. Different techniques will be employed to identify the optimal number of clusters that align with our dataset. Subsequently, evaluation methods will be applied to measure the efficiency of these clusters in effectively categorizing survey responses based on their intrinsic features, facilitating insightful predictions and analysis for future decisions.\n"
       ]
     },
